Removes clean task from upload task, because it doesn't work on Windows

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
         "uncss": "node build/uncss.js",
         "clean": "rm dist/* && rm .cache",
         "build": "parcel build index.html && node build/opengraph.js",
-        "upload": "yarn clean && yarn build && node build/upload.js"
+        "upload": "yarn build && node build/upload.js"
     }
 }
