--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
-        "uikit": "^3.0.3"
+        "uikit": "3.1.6"
     },
     "devDependencies": {
-        "dotenv": "^7.0.0",
+        "dotenv": "8.0.0",
         "filesize": "^4.1.2",
-        "node-sass": "^4.11.0",
+        "node-sass": "4.12.0",
         "parcel-bundler": "1.9.7",
-        "posthtml-expressions": "^1.1.0",
-        "ssh2": "latest",
-        "uncss": "^0.16.2"
+        "posthtml-expressions": "1.1.1",
+        "ssh2": "0.8.4",
+        "uncss": "0.17.0"
     },
     "scripts": {
         "serve": "parcel serve index.html",
