--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
-        "uikit": "3.1.6"
+        "uikit": "3.2.4"
     },
     "devDependencies": {
-        "dotenv": "8.0.0",
-        "filesize": "^4.1.2",
-        "node-sass": "4.12.0",
-        "parcel-bundler": "1.12.3",
+        "dotenv": "8.2.0",
+        "filesize": "6.0.1",
+        "node-sass": "4.13.0",
+        "parcel-bundler": "1.12.4",
         "posthtml-expressions": "1.1.1",
-        "ssh2": "0.8.4",
-        "uncss": "0.17.0"
+        "ssh2": "0.8.7",
+        "uncss": "0.17.2"
     },
     "scripts": {
         "serve": "parcel serve index.html --no-hmr",
