--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
-        "uikit": "3.5.6"
+        "node-forge": "0.10.0",
+        "uikit": "3.5.7"
     },
     "devDependencies": {
         "dotenv": "8.2.0",
         "filesize": "6.1.0",
         "node-sass": "4.14.1",
         "parcel-bundler": "1.12.4",
-        "posthtml-expressions": "1.4.5",
+        "posthtml-expressions": "1.4.7",
         "ssh2": "0.8.9",
         "uncss": "0.17.3"
     },
