--- a/package.json
+++ b/package.json
@@ -4,25 +4,21 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
-        "uikit": "3.5.7"
+        "uikit": "^3.6.18"
     },
     "devDependencies": {
-        "dotenv": "8.2.0",
-        "filesize": "6.1.0",
-        "node-sass": "4.14.1",
-        "parcel-bundler": "1.12.4",
-        "posthtml-expressions": "1.4.7",
-        "ssh2": "0.8.9",
-        "uncss": "0.17.3"
+        "@parcel/transformer-sass": "2.0.0-beta.2",
+        "dotenv": "^8.2.0",
+        "filesize": "^6.1.0",
+        "node-sass": "^5.0.0",
+        "parcel": "^2.0.0-beta.2",
+        "posthtml-expressions": "^1.7.1",
+        "uncss": "^0.17.3"
     },
     "scripts": {
         "serve": "parcel serve index.html --no-hmr",
         "uncss": "node build/uncss.js",
         "clean": "rm dist/* && rm .cache",
-        "build": "parcel build index.html && node build/opengraph.js",
-        "upload": "yarn build && node build/upload.js"
-    },
-    "resolutions": {
-        "node-forge": "^0.10.0"
+        "build": "parcel build index.html && node build/opengraph.js"
     }
 }
