--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     },
     "scripts": {
         "serve": "parcel serve index.html --no-hmr",
-        "build": "parcel build index.html && node build/opengraph.js"
+        "build": "parcel build index.html && node opengraph.js"
     }
 }
