--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -20,4 +20,5 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - run: yarn
       - run: yarn run build
