--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
         "uikit": "^3.6.18"
     },
     "devDependencies": {
-        "@parcel/transformer-sass": "2.0.0-beta.2",
+        "@parcel/transformer-image": "2.0.0-rc.0",
+        "@parcel/transformer-sass": "2.0.0-rc.0",
         "dotenv": "^10.0.0",
-        "node-sass": "^6.0.0",
         "parcel": "^2.0.0-beta.2",
         "posthtml-expressions": "^1.7.1"
     },
     "resolutions": {
         "is-svg": "^4.2.2",
-        "trim-newlines": "^4.0.2"
+        "trim-newlines": "^4.0.2",
+        "set-value": "^4.0.1",
+        "sass": "~1.37.0"
     },
     "scripts": {
         "serve": "parcel serve index.html --no-hmr",
